--- a/src/styles/_search-results.scss
+++ b/src/styles/_search-results.scss
@@ -4,6 +4,9 @@
   position: relative;
   height: $search-result-border-width + (($search-result-line-height * ($search-result-title-font-size + $search-result-subtitle-font-size)) + ($search-result-padding-y * 2) + $search-result-border-width) * $max-visible-search-results;
   overflow-y: scroll;
+  &.no-search-results {
+    border-top: solid $app-border-width rgba(#000, 0.3);
+  }
 }
 
 .search-results-watermark {
